modified and added index.js data.json. created package.json

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PINK SHOE CLUB</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="index.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">\
     <link rel="stylesheet" href="css/footer.css">
 
@@ -54,6 +55,7 @@
           </nav>
         </div>
         <div class="row">
+            <p id="para"></p>
             <p>From NatWest we were warmly welcomed by&nbsp;Kevin Morgan, Senior Director, Business Banking, NatWest Cymru. Pink Shoe founder Helene Martin Gee then outlined some of the history of Pink Shoe and its aims to support the lifelong development of women. Senate Chairman Jill Pay gave an overview of the UK Economic Blueprint and its national remit to encourage more women business-owners to scale-up. Interactive roundtables all discussing a different question&nbsp;were chaired by business leaders and entrepreneurs including: Christine Atkinson; Liz Maher; &nbsp;Alys Carlton; Lee Sharma; Charley Hagger; Catrin Pascoe; Katy Chamberlain; and Helen Walbey.</p>
             <p>Discussions focused on how best to stimulate the growth of scalable Women-owned Businesses (WBs) in the UK and broaden opportunities for female founders so they can contribute to the wider UK economy. Ideas were shared with delegates and the panel of Cheryl Gourlay, Susan Greenwood and Helene Martin Gee, chaired by Jill Pay.</p>
             <p>Discussions focused on how best to stimulate the growth of scalable Women-owned Businesses (WBs) in the UK and broaden opportunities for female founders so they can contribute to the wider UK economy. Ideas were shared with delegates and the panel of Cheryl Gourlay, Susan Greenwood and Helene Martin Gee, chaired by Jill Pay.</p>
