created a server and made new connection from scraping scrit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   </nav>
   </head>
 <body>
-<p id="demo" class="select"></p>
+<p class="select">
+  <select id="demo" onchange=choices() >
+</select>
+</p>
 
   <div class="right" style="background-color: #e29417">
     <div>
